# optimization-models

./: .python-version  Board.cpp  Board.h  CMakeLists.txt  README.md  branches.cpp  branches.h  main.cpp
agents/: Agent.cpp  Agent.h  Context.cpp  Context.h  Home.cpp  Home.h  Location.h  Visit.cpp  Visit.h  agents.cpp  agents.h
branches/: branches.cpp
data/: agents.10.16.rd1.txt  agents.20.30.rd1.txt
easyscip/: easyscip.h
generator/: agents.py
validate/: agents.py
